--- a/practice_page.css
+++ b/practice_page.css
@@ -7,12 +7,21 @@ body{
 	background-color: black;
 }
 
-	/* welcome paragraph */
-	#welcome_message{
-		background-color: white;
-		border:	2px solid black;
-		height: 100px;
-		margin-left: 30%;
-		margin-top: 20%;
-		width:	200px;
-	}
+/* welcome paragraph */
+#welcome_message{
+	background-color: white;
+	border:	2px solid black;
+	height: 100px;
+	margin-left: 30%;
+	margin-top: 20%;
+	width:	200px;
+}
+
+.main_content {
+    background-color: white;
+	border:	2px solid red;
+    text-align: center;
+    max-width: 180px;
+    margin: 5em 30% 10em 30%;
+	width:	40%;
+}
