--- a/JobHelper/JobHelper2/JobHelper/JobHelper/en.lproj/MainStoryboard.storyboard
+++ b/JobHelper/JobHelper2/JobHelper/JobHelper/en.lproj/MainStoryboard.storyboard
@@ -4,31 +4,29 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
-        <!--Job Helper View Controller-->
+        <!--Home View-->
         <scene sceneID="5">
             <objects>
-                <viewController id="2" customClass="JobHelperViewController" sceneMemberID="viewController">
+                <viewController id="2" customClass="JH_HomeView" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3">
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="This is my todo list" translatesAutoresizingMaskIntoConstraints="NO" id="REq-4C-eyq">
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="308" id="nu0-wE-YvG"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="53Y-o1-vE7">
+                                <items>
+                                    <barButtonItem title="edit toDo list" id="1dz-4J-xDv"/>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="REq-4C-eyq" firstAttribute="bottom" secondItem="3" secondAttribute="bottom" type="default" id="b2f-ZV-URd"/>
-                            <constraint firstItem="REq-4C-eyq" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="iWs-gq-MLZ"/>
-                            <constraint firstItem="REq-4C-eyq" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="xuK-Jm-Rpe"/>
+                            <constraint firstItem="53Y-o1-vE7" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="X1b-kq-bQW"/>
+                            <constraint firstItem="53Y-o1-vE7" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="dpb-rX-g3q"/>
+                            <constraint firstItem="53Y-o1-vE7" firstAttribute="top" secondItem="3" secondAttribute="top" constant="467" id="qN8-dw-fQ3"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="ULX-gw-zA9">
+                        <barButtonItem key="leftBarButtonItem" title="export to EverNote" id="3W8-q7-547"/>
                         <barButtonItem key="rightBarButtonItem" title="my jobs" id="rqD-6d-BZM">
                             <connections>
                                 <segue destination="qdj-LY-Pmu" kind="modal" identifier="goToSecondPage" modalTransitionStyle="flipHorizontal" id="RHN-FV-piP"/>
@@ -40,10 +38,10 @@
             </objects>
             <point key="canvasLocation" x="1409" y="-389"/>
         </scene>
-        <!--Job Helper Second View Controller - my jobs-->
+        <!--All Jobs View - my jobs-->
         <scene sceneID="nuz-mi-Mer">
             <objects>
-                <tableViewController id="j3g-ij-0n0" customClass="JobHelperSecondViewController" sceneMemberID="viewController">
+                <tableViewController id="j3g-ij-0n0" customClass="JH_AllJobsView" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="YUd-N4-DXm">
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -73,16 +71,21 @@
                                 <segue destination="d3H-Mn-BAR" kind="modal" identifier="returnToHome" modalTransitionStyle="flipHorizontal" id="HqH-5R-857"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="+ job" id="djb-gU-jBY">
+                            <connections>
+                                <action selector="addJob:" destination="j3g-ij-0n0" id="L0D-qt-L33"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rgU-oB-Mdi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1401" y="330"/>
         </scene>
-        <!--Job Helper Job View Controller - job view-->
+        <!--Job View - job view-->
         <scene sceneID="MMk-z7-Z5c">
             <objects>
-                <viewController id="lZb-a2-tGY" customClass="JobHelperJobViewController" sceneMemberID="viewController">
+                <viewController id="lZb-a2-tGY" customClass="JH_JobView" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="e5x-Da-OJ9">
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -158,14 +161,17 @@
         </scene>
     </scenes>
     <classes>
-        <class className="JobHelperJobViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/JobHelperJobViewController.h"/>
+        <class className="JH_AllJobsView" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/JH_AllJobsView.h"/>
+            <relationships>
+                <relationship kind="action" name="addJob:" candidateClass="UIBarButtonItem"/>
+            </relationships>
         </class>
-        <class className="JobHelperSecondViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/JobHelperSecondViewController.h"/>
+        <class className="JH_HomeView" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/JH_HomeView.h"/>
         </class>
-        <class className="JobHelperViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/JobHelperViewController.h"/>
+        <class className="JH_JobView" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/JH_JobView.h"/>
         </class>
         <class className="NSLayoutConstraint" superclassName="NSObject">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
