--- a/JobHelper/JobHelper2/JobHelper/JobHelper/en.lproj/MainStoryboard.storyboard
+++ b/JobHelper/JobHelper2/JobHelper/JobHelper/en.lproj/MainStoryboard.storyboard
@@ -46,33 +46,6 @@
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <tableView key="tableFooterView" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="singleLineEtched" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="qzP-n9-IGq">
-                            <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            <prototypes>
-                                <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="JH_JobIdentifier" textLabel="422-6b-EHd" style="IBUITableViewCellStyleDefault" id="6fx-Gs-6bs">
-                                    <rect key="frame" x="0.0" y="22" width="320" height="45"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <subviews>
-                                            <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="422-6b-EHd">
-                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
-                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                            </label>
-                                        </subviews>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                    </view>
-                                </tableViewCell>
-                            </prototypes>
-                            <connections>
-                                <outlet property="dataSource" destination="j3g-ij-0n0" id="2ws-Vp-qdo"/>
-                                <outlet property="delegate" destination="j3g-ij-0n0" id="DAg-dc-bTM"/>
-                            </connections>
-                        </tableView>
                         <connections>
                             <outlet property="dataSource" destination="j3g-ij-0n0" id="ZG8-F1-X2B"/>
                             <outlet property="delegate" destination="j3g-ij-0n0" id="906-zB-TZE"/>
@@ -90,9 +63,6 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
-                    <connections>
-                        <outlet property="jobsList" destination="qzP-n9-IGq" id="Id5-nV-Evp"/>
-                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rgU-oB-Mdi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -176,6 +146,25 @@
             <point key="canvasLocation" x="1878" y="-389"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="JH_AllJobsView" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/JH_AllJobsView.h"/>
+            <relationships>
+                <relationship kind="action" name="addJob:" candidateClass="UIBarButtonItem"/>
+                <relationship kind="action" name="makeJob:"/>
+                <relationship kind="outlet" name="jobsList" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="JH_HomeView" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/JH_HomeView.h"/>
+        </class>
+        <class className="JH_JobView" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/JH_JobView.h"/>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
